[package]
name = "rs_lib_strategy_serde_json"
version = "0.1.0"
authors = ["alexandre.mahdhaoui <alexandre.mahdhaoui@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"

[dependencies.strategy_serde]
git = "https://gitlab.com/alexandre.mahdhaoui/rs-lib-strategy-serde"
package = "rs_lib_strategy_serde"

[dev-dependencies]
serde = { version = "1", features = ["derive"]}
pretty_assertions = "1"
